# ROS_simulation

./: LICENSE  README.md
ros_underwater_simulator/: CMakeLists.txt  package.xml
ros_underwater_simulator/controller/: controller_instructions.yaml  controller_instructions_second_rev.yaml  jointStates.yaml
ros_underwater_simulator/launch/: controllable.launch  display.launch
ros_underwater_simulator/meshes/: box.STL  button.STL  fixed_ee.STL  hook.STL
ros_underwater_simulator/nodes/: teleop_final.py
ros_underwater_simulator/urdf/: uw_arm_control_ee.urdf
uw_arm_control/: CMakeLists.txt  package.xml
uw_arm_control/config/: controller_instructions.yaml
uw_arm_control/launch/: controller.launch
